--- a/templates/stepper/step_2_connect_to_model.html
+++ b/templates/stepper/step_2_connect_to_model.html
@@ -66,7 +66,8 @@
                         </span>
                     </template>
 
-                    <sly-image-slider v-if="tag.images.length > 0"
+                    <sly-image-slider
+                            v-if="tag.images.length > 0"
                                       :data="tag.images"/>
                 </el-collapse-item>
             </el-collapse>
