--- a/templates/stepper/step_2_connect_to_model.html
+++ b/templates/stepper/step_2_connect_to_model.html
@@ -5,7 +5,7 @@
                 {{{ connect_model_notification_box.to_html() }}}
             </div>
             <div v-else>
-                <sly-field title="INFO: successfully connected to model"
+                <sly-field title="Model Connected"
                            description="below are the parameters of the model"
                            style="padding-top: 4px; padding-bottom: 6px">
 
