labels annotation done

--- a/templates/stepper/step_3_preferences.html
+++ b/templates/stepper/step_3_preferences.html
@@ -3,7 +3,7 @@
 
         <div>
             <el-form label-width="120px" label-position="left">
-                <el-form-item label="Labeling mode" required="True">
+                <el-form-item label="Apply model to" required="True">
                     <el-radio-group v-model="state.selectedLabelingMode">
                         <el-radio-button label="Classes"></el-radio-button>
                         <el-radio-button label="Images"></el-radio-button>
