--- a/templates/stepper/step_2_connect_to_model.html
+++ b/templates/stepper/step_2_connect_to_model.html
@@ -32,7 +32,7 @@
                 </sly-select-app-session>
             </div>
 
-            <div v-if="data.model_info" style="margin: 18px 5px">
+            <div v-if="data.model_info && data.model_connected" style="margin: 18px 5px">
 
                 <div>
                     <div v-for="v, k in data.model_info" class="mb10" style="word-break: break-all;">
@@ -47,7 +47,7 @@
                 <div v-else style="position: absolute; bottom: 0">{{{ reselect_model_button.to_html() }}}</div>
             </div>
         </div>
-        <div v-if="data.modelClasses" style="width: 600px">
+        <div v-if="data.modelClasses && data.model_connected" style="width: 600px">
             <div style="display: flex; flex-direction: row; width: 100%; justify-content: space-between; align-items: center">
                 <div style="margin-bottom: 10px;">
                     {{{ model_classes_notification_box.to_html() }}}
