--- a/templates/stepper/step_3_preferences.html
+++ b/templates/stepper/step_3_preferences.html
@@ -1,6 +1,6 @@
 <sly-card title="Labeling Preferences" subtitle="adjust preferences for images labeling">
-    <div style="display: flex; flex-direction: row; justify-content: space-between; overflow-x: hidden;">
 
+    <div style="display: flex; flex-direction: row; justify-content: space-between; overflow-x: hidden;">
         <div>
             <el-form label-width="120px" label-position="left">
                 <el-form-item label="Apply model to" required="True">
@@ -12,17 +12,40 @@
                 <el-form-item label="Predict topN" required="True">
                     <el-input-number v-model="state.topN" :min="1" :max="100"></el-input-number>
                 </el-form-item>
-{#                <el-form-item label="Output project" required="True">#}
-{#                    <el-radio-group v-model="state.outputProject">#}
-{#                        <el-radio-button label="New"></el-radio-button>#}
-{#                        <el-radio-button label="Existing"></el-radio-button>#}
-{#                    </el-radio-group>#}
-{#                </el-form-item>#}
+                {#                <el-form-item label="Output project" required="True">#}
+                {#                    <el-radio-group v-model="state.outputProject">#}
+                {#                        <el-radio-button label="New"></el-radio-button>#}
+                {#                        <el-radio-button label="Existing"></el-radio-button>#}
+                {#                    </el-radio-group>#}
+                {#                </el-form-item>#}
             </el-form>
 
             <div style="margin-top: 15px;">
-                <div v-if="data.current_step < 4">{{{ select_preferences_button.to_html() }}}</div>
-                <div v-else style="position: absolute; bottom: 0">{{{ reselect_preferences_button.to_html() }}}</div>
+                <div style="margin: 0 0 20px; width: 300px">
+                    {{{ labeling_progress.to_html() }}}
+                </div>
+                <div style="display: flex; flex-direction: row; align-items: center">
+                    {{{ select_preferences_button.to_html() }}}
+                    <el-collapse-transition>
+                        <div v-show="data.labelingDone">
+                            <sly-field style="margin: 0 10px" title="" description="Output Project"
+                                       class="without-margins">
+                                <a slot="title" target="_blank"
+                                   :href="`${data.instanceAddress}/projects/${data.outputProject.id}/datasets`">{{ data.outputProject.name }}</a>
+                                <sly-icon slot="icon" :options="{ imageUrl: `${data.outputProject.img_url}` }"/>
+                            </sly-field>
+                        </div>
+                    </el-collapse-transition>
+                </div>
+
+                <el-collapse-transition>
+                    <div v-show="data.labelingDone">
+                        <div style="margin: 20px 3px 0; width: 300px">
+                            {{{ labeling_done_label.to_html() }}}
+                        </div>
+                    </div>
+                </el-collapse-transition>
+
             </div>
 
         </div>
