--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./static/styles.css"/>
 </head>
 
-<body>
+<body style="margin: 0; padding: 0;">
 
 <script src="https://supervise.ly/sly-app-widgets-2.0.0.bundle.js"></script>
 <script
