--- a/templates/stepper/step_2_connect_to_model.html
+++ b/templates/stepper/step_2_connect_to_model.html
@@ -1,6 +1,6 @@
 <sly-card title="Connect to Model" subtitle="connect to served classification model"
           :disabled="{disabled: data.current_step < 2, message: 'complete previous step to unlock'}">
-    <div style="display: flex; flex-direction: row; justify-content: space-between; overflow: hidden">
+    <div style="display: flex; flex-direction: column; overflow: hidden">
         <div>
             <div v-if="!data.model_connected" style="margin-bottom: 15px">
                 {{{ connect_model_notification_box.to_html() }}}
@@ -14,11 +14,6 @@
                         <i class="zmdi zmdi-circle"></i>
                     </sly-icon>
                 </sly-field>
-                <div v-for="v,k in data.modelInfo" class="mb10" style="word-break: break-all;">
-                    <div style="margin-bottom: 4px">
-                        <b>{{ k }}</b>: <span>{{ v }}</span>
-                    </div>
-                </div>
             </div>
 
 
@@ -33,8 +28,8 @@
                 </sly-select-app-session>
             </div>
 
-            <div v-if="data.model_info && data.model_connected" style="margin: 18px 5px">
-
+            <div v-if="data.model_info && data.model_connected" style="margin: 22px 5px">
+                <h3>Model Stats:</h3>
                 <div>
                     <div v-for="v, k in data.model_info" class="mb10" style="word-break: break-all;">
                         <div style="margin-bottom: 4px">
@@ -43,22 +38,20 @@
                     </div>
                 </div>
             </div>
-            <div style="margin-top: 15px;">
-                <div v-if="data.current_step < 3">{{{ connect_model_button.to_html() }}}</div>
-                <div v-else style="bottom: 0">{{{ reselect_model_button.to_html() }}}</div>
-            </div>
         </div>
-        <div v-if="data.modelClasses && data.model_connected" style="width: 600px">
+
+
+        <div v-if="data.modelClasses && data.model_connected" style="margin: 0 10px 0 0">
+            <hr/>
+
             <div style="display: flex; flex-direction: row; width: 100%; justify-content: space-between; align-items: center">
-                <div style="margin-bottom: 10px;">
-                    {{{ model_classes_notification_box.to_html() }}}
-                </div>
+                <h3>Model Classes:</h3>
                 <div>
                     {{{ toggle_all_previews_button.to_html() }}}
                 </div>
             </div>
 
-            <el-collapse style="width: 100%; max-height: 400px; overflow-y: scroll"
+            <el-collapse style="width: 100%;"
                          v-model="state.activeNames">
                 <el-collapse-item v-for="tag in data.modelClasses" :name="tag.name">
                     <template slot="title">
@@ -73,6 +66,11 @@
                 </el-collapse-item>
             </el-collapse>
 
+        </div>
+
+        <div style="margin-top: 15px;">
+            <div v-if="data.current_step < 3">{{{ connect_model_button.to_html() }}}</div>
+            <div v-else style="bottom: 0">{{{ reselect_model_button.to_html() }}}</div>
         </div>
     </div>
 </sly-card>
