--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
                 <sly-stepper-item> {% include 'stepper/step_1_input_projects.html' %}</sly-stepper-item>
                 <sly-stepper-item> {% include 'stepper/step_2_connect_to_model.html' %}</sly-stepper-item>
                 <sly-stepper-item> {% include 'stepper/step_3_labeling_preferences.html' %}</sly-stepper-item>
+                <sly-stepper-item> {% include 'stepper/step_4_output_data.html' %}</sly-stepper-item>
              </sly-stepper>
 
         </template>
