--- a/templates/stepper/3_preferences/objects_padding.html
+++ b/templates/stepper/3_preferences/objects_padding.html
@@ -2,7 +2,7 @@
     <el-collapse-transition>
         <div v-show="state.selectedLabelingMode == 'Classes'">
             <sly-field title="Padding"
-                       description="adjust additional padding for each object"
+                       description="Adjust additional padding for each object"
                        style="margin: 15px 0 0">
                 <el-input-number v-model="state.padding" :min="0" :max="100"></el-input-number> %
             </sly-field>
