--- a/templates/stepper/step_1_input_projects.html
+++ b/templates/stepper/step_1_input_projects.html
@@ -1,4 +1,4 @@
-<sly-card title="Input Data" subtitle="select input projects to label">
+<sly-card title="Input Data" subtitle="Select input projects to label">
     <div style="display:flex; flex-direction: row">
         {{{ project_selector.to_html() }}}
     </div>
