--- a/static/styles.css
+++ b/static/styles.css
@@ -41,6 +41,11 @@
     font-size: 0.9rem;
 }
 
+
+.ultra-table .el-table__body-wrapper {
+    overflow-x: hidden;
+}
+
 .without-margins.input-label {
     margin: 2px 18px 0 !important;
 }
@@ -48,4 +53,10 @@
 
 .children-with-margin * {
     margin: 0 10px 0 0;
+}
+
+.pretty-hr {
+    border: 0;
+    border-bottom: 2px dashed #e9e9e9;
+    background: #fdfdfd;
 }
