--- a/templates/stepper/3_preferences/add_confedence.html
+++ b/templates/stepper/3_preferences/add_confedence.html
@@ -1,7 +1,9 @@
 <sly-field title="Add Confidence"
-           description="place predictions confidence as tags values"
+           description="Place predictions confidence as tags values"
            style="margin: 10px 0">
     <div style="margin: 0px 0">
-        <el-switch style="padding: 10px 0; margin: 0 10px 2px 0" v-model="state.addConfidence" on-text="" off-text=""></el-switch>
+        <el-switch style="padding: 10px 0; margin: 0 10px 2px 0"
+                   :disabled="data.current_step !== 3"
+                   v-model="state.addConfidence" on-text="" off-text=""></el-switch>
     </div>
 </sly-field>
