--- a/templates/stepper/step_3_settings.html
+++ b/templates/stepper/step_3_settings.html
@@ -1,58 +1,41 @@
-<div style="display: flex; flex-direction: column; overflow: hidden;">
+<sly-card title="Labeling Preferences" subtitle="Adjust preferences for images labeling"
+          :disabled="{disabled: data.current_step < 3, message: 'complete previous step to unlock'}"
+          style="margin: 0 10px 0 0; width: 50%">
+
+    <div >
+        <div style="display: flex; flex-direction: column; overflow: hidden;">
 
 
-    <sly-field title="Apply Model to"
-               description="you can label specific classes or whole images"
-               style="margin: 10px 0">
-        <el-radio-group style="margin: 5px 0 0" v-model="state.selectedLabelingMode">
-            <el-radio-button label="Classes"></el-radio-button>
-            <el-radio-button label="Images"></el-radio-button>
-        </el-radio-group>
-        {% include 'stepper/3_preferences/classes_table.html' %}
-        {% include 'stepper/3_preferences/objects_padding.html' %}
+            <sly-field title="Apply Model to"
+                       description="You can label specific classes or whole images"
+                       style="margin: 10px 0">
+                <el-radio-group style="margin: 5px 0 0"
+                                :disabled="data.current_step !== 3"
+                                v-model="state.selectedLabelingMode">
+                    <el-radio-button label="Classes"></el-radio-button>
+                    <el-radio-button label="Images"></el-radio-button>
+                </el-radio-group>
+                {% include 'stepper/3_preferences/classes_table.html' %}
+                {% include 'stepper/3_preferences/objects_padding.html' %}
 
-    </sly-field>
-    <sly-field title="Apply topN Predictions"
-               :description="`set number of predictions which be applied to ${ state.selectedLabelingMode }`"
-               style="margin: 10px 0">
-        <el-input-number v-model="state.topN" :min="1" :max="100"></el-input-number>
-    </sly-field>
+            </sly-field>
+            <sly-field title="Apply topN Predictions"
+                       :description="`Set number of predictions which be applied to ${ state.selectedLabelingMode }`"
+                       style="margin: 10px 0">
+                <el-input-number
+                        :disabled="data.current_step !== 3"
+                        v-model="state.topN" :min="1" :max="100"></el-input-number>
+            </sly-field>
 
-    {% include 'stepper/3_preferences/add_confedence.html' %}
-    {% include 'stepper/3_preferences/additional_suffix.html' %}
-
-
-    <div style="">
-        <el-collapse-transition>
-            <div v-show="data.labelingStarted || data.labelingDone" style="margin: 0 0 14px; width: 300px">
-                {{{ labeling_progress.to_html() }}}
-            </div>
-        </el-collapse-transition>
-        <div style="display: flex; flex-direction: row; align-items: center">
-            <div style="display: flex; flex-direction: row; align-items: center">
-                {{{ select_preferences_button.to_html() }}}
-
-            </div>
-            <el-collapse-transition>
-                <div v-show="data.labelingDone">
-                    <sly-field style="margin: 0 10px" title="" description="Output Project"
-                               class="without-margins">
-                        <a slot="title" target="_blank"
-                           :href="`${data.instanceAddress}/projects/${data.outputProject.id}/datasets`">{{ data.outputProject.name }}</a>
-                        <sly-icon slot="icon" :options="{ imageUrl: `${data.outputProject.img_url}` }"/>
-                    </sly-field>
-                </div>
-            </el-collapse-transition>
+            {% include 'stepper/3_preferences/add_confedence.html' %}
+            {% include 'stepper/3_preferences/additional_suffix.html' %}
         </div>
+        <div style="display: flex; flex-direction: row; align-items: center">
 
-        <el-collapse-transition>
-            <div v-show="data.labelingDone">
-                <div style="margin: 14px 3px 0; width: 300px">
-                    {{{ labeling_done_label.to_html() }}}
-                </div>
-            </div>
-        </el-collapse-transition>
+            <div v-if="data.current_step < 4">{{{ select_preferences_button.to_html() }}}</div>
+            <div v-else style="bottom: 0">{{{ reselect_preferences_button.to_html() }}}</div>
 
+        </div>
     </div>
 
-</div>
+</sly-card>
