--- a/templates/stepper/3_preferences/objects_padding.html
+++ b/templates/stepper/3_preferences/objects_padding.html
@@ -2,9 +2,12 @@
     <el-collapse-transition>
         <div v-show="state.selectedLabelingMode == 'Classes'">
             <sly-field title="Padding"
+
                        description="Adjust additional padding for each object"
                        style="margin: 15px 0 0">
-                <el-input-number v-model="state.padding" :min="0" :max="100"></el-input-number> %
+                <el-input-number
+                        :disabled="data.current_step !== 3"
+                        v-model="state.padding" :min="0" :max="100"></el-input-number> %
             </sly-field>
         </div>
     </el-collapse-transition>
