--- a/static/styles.css
+++ b/static/styles.css
@@ -60,3 +60,11 @@
     border-bottom: 2px dashed #e9e9e9;
     background: #fdfdfd;
 }
+
+.field-with-checkbox-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+
+}
