--- a/templates/stepper/3_preferences/additional_suffix.html
+++ b/templates/stepper/3_preferences/additional_suffix.html
@@ -1,17 +1,23 @@
-<sly-field title="Add Suffix"
-           description="Place additional suffix to applied tags"
-           style="margin: 10px 0">
-    <div style="margin: 0px 0">
-        <el-switch style="padding: 10px 0; margin: 0 10px 2px 0"
-                   :disabled="data.current_step !== 3"
-                   v-model="state.addSuffix" on-text="" off-text=""></el-switch>
-        <transition name="el-fade-in">
-            <div v-show="state.addSuffix" style="display: inline-block">
+<div class="field-with-checkbox-container">
 
-                <el-input style="margin: 0" placeholder="_nn"
-                          :disabled="data.current_step !== 3"
-                          v-model="state.suffixValue"></el-input>
-            </div>
-        </transition>
+    <el-checkbox v-model="state.addSuffix"
+                 :disabled="data.current_step !== 3"
+                 style="margin: 0 10px 0 0"></el-checkbox>
+
+
+    <sly-field title="Add Suffix"
+               description="Place additional suffix to applied tags"
+               style="margin: 10px 0">
+
+    </sly-field>
+
+</div>
+
+<el-collapse-transition>
+    <div v-show="state.addSuffix" style="display: inline-block">
+
+        <el-input style="margin: 0 0 10px 0; width: 140px" placeholder="_nn"
+                  :disabled="data.current_step !== 3"
+                  v-model="state.suffixValue"></el-input>
     </div>
-</sly-field>
+</el-collapse-transition>
