--- a/templates/stepper/step_3_settings.html
+++ b/templates/stepper/step_3_settings.html
@@ -35,7 +35,7 @@
                         v-model="state.batchSize" :min="1" :max="1000"></el-input-number>
             </sly-field>
             <sly-field title="Per-class confidence thresholds"
-                       description="Can be used only with multi-label classification models"
+                       description="You can specify a range of confidence threshold values for each class. Confidences out of range will not be included to result. This option can be used only with multi-label classification models."
                        v-if="state.cls_mode == 'multi_label'"
                        style="margin: 10px 0">
                 <el-checkbox v-model="state.usePerClassThresholds">Use per-class thresholds</el-checkbox>
@@ -49,9 +49,9 @@
                             <el-input-number 
                                 :disabled="data.current_step !== 3" 
                                 v-model="tag.confFrom" 
-                                min="0" 
-                                max="1"
-                                step="0.1"
+                                :min="0" 
+                                :max="1"
+                                :step="0.1"
                             ></el-input-number>
                         </td>
                         <td>
@@ -59,9 +59,9 @@
                             <el-input-number 
                                 :disabled="data.current_step !== 3"
                                 v-model="tag.confTo"
-                                min="0" 
-                                max="1"
-                                step="0.1"
+                                :min="0" 
+                                :max="1"
+                                :step="0.1"
                             ></el-input-number>
                         </td>
                     </tr>
