--- a/templates/index.html
+++ b/templates/index.html
@@ -3,20 +3,15 @@
 <head>
     <title>Apply Classifier to Images Project</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/svg.select.js@3.0.1/dist/svg.select.min.css"/>
-    <link
-      type="text/css"
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/supervisely/js-bundle@2.1.36/sly-app-widgets-2.1.36.bundle.css"
-    />
     <link rel="stylesheet" href="./static/styles.css"/>
 </head>
 
 <body>
-    
-<script src="https://cdn.jsdelivr.net/gh/supervisely/js-bundle@2.1.36/sly-app-widgets-2.1.36.bundle.js"></script>
+
+<script src="https://supervise.ly/sly-app-widgets-2.0.0.bundle.js"></script>
 <script
         type="module"
-        src="https://cdn.jsdelivr.net/gh/supervisely-ecosystem/supervisely-app-frontend-js@v0.0.36/SlyApp.js">
+        src="https://cdn.jsdelivr.net/gh/supervisely-ecosystem/supervisely-app-frontend-js@v0.0.15/SlyApp.js">
 </script>
 <!--        src="https://supervisely-ecosystem.github.io/supervisely-app-frontend-js/SlyApp.js">-->
 
