--- a/templates/index.html
+++ b/templates/index.html
@@ -3,17 +3,21 @@
 <head>
     <title>Apply Classifier to Images Project</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/svg.select.js@3.0.1/dist/svg.select.min.css"/>
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/supervisely/js-bundle@{{{js_bundle_version}}}/sly-app-widgets-{{{js_bundle_version}}}.bundle.css"
+    />
     <link rel="stylesheet" href="./static/styles.css"/>
 </head>
 
 <body>
 
-<script src="https://supervise.ly/sly-app-widgets-2.1.44.bundle.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/supervisely/js-bundle@2.1.44/sly-app-widgets-2.1.44.bundle.js"></script>
 <script
-        type="module"
-        src="https://cdn.jsdelivr.net/gh/supervisely-ecosystem/supervisely-app-frontend-js@v0.0.42/SlyApp.js">
-</script>
-<!--        src="https://supervisely-ecosystem.github.io/supervisely-app-frontend-js/SlyApp.js">-->
+  type="module"
+  src="https://cdn.jsdelivr.net/gh/supervisely-ecosystem/supervisely-app-frontend-js@v0.0.42/SlyApp.js"
+></script>
 
 
 <div id="sly-app">
