--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <link
       type="text/css"
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/supervisely/js-bundle@{{{js_bundle_version}}}/sly-app-widgets-{{{js_bundle_version}}}.bundle.css"
+      href="https://cdn.jsdelivr.net/gh/supervisely/js-bundle@2.1.44/sly-app-widgets-2.1.44.bundle.css"
     />
     <link rel="stylesheet" href="./static/styles.css"/>
 </head>
