--- a/templates/stepper/3_preferences/classes_table.html
+++ b/templates/stepper/3_preferences/classes_table.html
@@ -1,53 +1,88 @@
-<div style="overflow-x: hidden; ">
-    <el-collapse-transition>
-        <div v-show="state.selectedLabelingMode == 'Classes'">
-            <el-table
-                    class="ultra-table"
-                    :data="data.classes_table_content"
-                    :disabled="data.current_step > 2"
-                    style="width: 740px; max-height: 400px; overflow-y: scroll; margin: 10px 0 0;"
-                    :default-sort="{prop: 'name', order: 'descending'}"
-                    @selection-change="
+<div style="overflow-x: hidden">
+  <el-collapse-transition>
+    <div v-show="state.selectedLabelingMode == 'Classes'">
+      <sly-el-table-selection-container
+        :data="data.classes_table_content"
+        :selected="state.selectedClasses"
+        identity-field="name"
+      >
+        <el-table
+          ref="sly-el-table-with-selection"
+          class="ultra-table"
+          :data="data.classes_table_content"
+          :disabled="data.current_step > 2"
+          style="
+            width: 740px;
+            max-height: 400px;
+            overflow-y: scroll;
+            margin: 10px 0 0;
+          "
+          :default-sort="{prop: 'name', order: 'descending'}"
+          @selection-change="
                                                 (val) => {
                                                     state.selectedClasses = val.map(x => x.name);
                                                     post('/classes_selection_change/');
-                                                }">
-                <el-table-column type="selection" :disabled="data.current_step > 2"
-                                 width="46px"></el-table-column>
-                <el-table-column sortable prop="name" :label="`Class Name`" width="134px">
-                    <template scope="scope">
-                        <div>
-                            <i class="zmdi zmdi-circle" :style="{color: scope.row.color}"></i>
-                            <span class="ml5 mr10">{{ scope.row.name }}</span>
-                        </div>
-                    </template>
-                </el-table-column>
-                <el-table-column sortable prop="shape" :label="`Shape`" align="center" width="120px">
-                    <template scope="scope">
-                                <span>
-                                    <i class="zmdi zmdi-shape"></i>
-                                    {{ scope.row.shape }}
-                                </span>
-                    </template>
-                </el-table-column>
+                                                }"
+        >
+          <el-table-column
+            type="selection"
+            :disabled="data.current_step > 2"
+            width="46px"
+          ></el-table-column>
+          <el-table-column
+            sortable
+            prop="name"
+            :label="`Class Name`"
+            width="134px"
+          >
+            <template scope="scope">
+              <div>
+                <i
+                  class="zmdi zmdi-circle"
+                  :style="{color: scope.row.color}"
+                ></i>
+                <span class="ml5 mr10">{{ scope.row.name }}</span>
+              </div>
+            </template>
+          </el-table-column>
+          <el-table-column
+            sortable
+            prop="shape"
+            :label="`Shape`"
+            align="center"
+            width="120px"
+          >
+            <template scope="scope">
+              <span>
+                <i class="zmdi zmdi-shape"></i>
+                {{ scope.row.shape }}
+              </span>
+            </template>
+          </el-table-column>
 
-                <el-table-column sortable prop="img_num" :label="`Images Labeled`" align="center">
-                    <template scope="scope">
-                                <span>
-                                    {{ scope.row.img_num }}
-                                </span>
-                    </template>
-                </el-table-column>
+          <el-table-column
+            sortable
+            prop="img_num"
+            :label="`Images Labeled`"
+            align="center"
+          >
+            <template scope="scope">
+              <span> {{ scope.row.img_num }} </span>
+            </template>
+          </el-table-column>
 
-                <el-table-column sortable prop="obj_num" :label="`Objects Labeled`" align="center">
-                    <template scope="scope">
-                                <span>
-                                    {{ scope.row.obj_num }}
-                                </span>
-                    </template>
-                </el-table-column>
-
-            </el-table>
-        </div>
-    </el-collapse-transition>
+          <el-table-column
+            sortable
+            prop="obj_num"
+            :label="`Objects Labeled`"
+            align="center"
+          >
+            <template scope="scope">
+              <span> {{ scope.row.obj_num }} </span>
+            </template>
+          </el-table-column>
+        </el-table>
+      </sly-el-table-selection-container>
+    </div>
+  </el-collapse-transition>
 </div>
