--- a/templates/stepper/step_4_output_data.html
+++ b/templates/stepper/step_4_output_data.html
@@ -1,5 +1,5 @@
 <sly-card title="Output Project" subtitle="Launch labeling process and get the results"
-          :disabled="{disabled: data.current_step < 4, message: 'complete previous step to unlock'}">
+    :disabled="{disabled: data.current_step < 4, message: 'complete previous step to unlock'}">
     <div style="">
 
         <el-collapse-transition>
@@ -21,10 +21,10 @@
             <el-collapse-transition>
                 <div v-show="data.labelingDone">
                     <sly-field style="margin: 15px 10px 0 0 !important" title="" description="Output Project"
-                               class="without-margins">
-                        <a slot="title" target="_blank"
-                           :href="`${data.instanceAddress}/projects/${data.outputProject.id}/datasets`">{{ data.outputProject.name }}</a>
-                        <sly-icon slot="icon" :options="{ imageUrl: `${data.outputProject.img_url}` }"/>
+                        class="without-margins">
+                        <a slot="title" target="_blank" :href="`${data.outputProject.projectUrl}`">{{
+                            data.outputProject.name }}</a>
+                        <sly-icon slot="icon" :options="{ imageUrl: `${data.outputProject.img_url}` }" />
                     </sly-field>
                 </div>
             </el-collapse-transition>
